--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,65 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.form-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  background: green;
+  padding: 50px;
+  /* display: none; */
+}
+
+.form input {
+  margin-bottom: 10px;
+  width: 300px;
+  height: 50px;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.form button {
+  width: 300px;
+  height: 50px;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.header-form {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
+  background: slateblue;
+  align-items: center;
+  color: white;
+}
+
+.header-form button {
+  width: 200px;
+  height: 50px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+button {
+  transition: 0.5s ease all;
+}
+
+button:hover {
+  background: black;
+  color: white;
+}
